--- a/shareyourphotos.cabal
+++ b/shareyourphotos.cabal
@@ -15,8 +15,9 @@ library
   exposed-modules: ShareYourPhotos
   build-depends:
     base >= 4.7 && < 5
-    , scotty >= 0.12
+    , scotty ^>= 0.12
     , http-types
+    , text ^>= 2.0.1
 
   default-extensions:
     ImportQualifiedPost
