--- a/shareyourphotos.cabal
+++ b/shareyourphotos.cabal
@@ -14,10 +14,9 @@ library
   hs-source-dirs: src
   exposed-modules: ShareYourPhotos
   build-depends:
-    base >= 4.7 && < 5
-    , scotty ^>= 0.12
-    , http-types
+      base >= 4.7 && < 5
     , text ^>= 2.0.1
+    , webdriver ^>= 0.12.0.0
 
   default-extensions:
     ImportQualifiedPost
