--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,11 +7,10 @@
     "default_popup": "hello.html",
     "default_icon": "hello_extensions.png"
   },
-    "content_scripts": [
+  "permissions": ["activeTab","scripting"],    "content_scripts": [
     {
       "js": ["scripts/content.js"],
       "matches": [
-        "https://developer.chrome.com/docs/extensions/*",
         "https://web.whatsapp.com/*"
       ]
     }
