--- a/shareyourphotos.cabal
+++ b/shareyourphotos.cabal
@@ -15,11 +15,13 @@ library
   exposed-modules: ShareYourPhotos
   build-depends:
       base >= 4.7 && < 5
-    , text ^>= 2.0.1
-    , webdriver ^>= 0.12.0.0
-
+    , aeson
+    , scotty
+    , wai-cors
+    
   default-extensions:
     ImportQualifiedPost
+    DeriveGeneric
 
 executable shareyourphotos
   import: common
