the extension popup opens the photo animation

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -9,7 +9,8 @@
   },
   "permissions": [
       "activeTab",
-      "scripting"
+      "scripting",
+      "tabs"
     ],
     "content_scripts": [
     {
