--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -5,7 +5,6 @@
   "version": "1.0",
   "action": {
     "default_popup": "hello.html",
-    "default_icon": "hello_extensions.png"
   },
   "permissions": [
       "activeTab",
@@ -19,5 +18,12 @@
         "https://web.whatsapp.com/*"
       ]
     }
-  ]
+  ],
+  "browser_action": {
+    "default_icon": "icon.png",
+    "default_popup": "popup.html"
+  },
+  "icons": { "16": "icon16.png",
+          "48": "icon48.png",
+          "128": "icon128.png" }
 }
