--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -4,7 +4,7 @@
   "description": "This is a proof of concept | recieving information from the google chrome extension and filtering it, then sending it back.",
   "version": "1.0",
   "action": {
-    "default_popup": "hello.html",
+    "default_popup": "hello.html"
   },
   "permissions": [
       "activeTab",
