--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -11,14 +11,18 @@
       "scripting",
       "tabs"
     ],
+    "background": {
+        "scripts": ["scripts/background.js"],
+        "persistent": false
+    },
     "content_scripts": [
-    {
-      "js": ["scripts/content.js"],
-      "matches": [
-        "https://web.whatsapp.com/*"
-      ]
-    }
-  ],
+      {
+        "js": ["scripts/content.js"],
+        "matches": [
+          "https://web.whatsapp.com/*"
+        ]
+      }
+    ],
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
