--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,17 +3,15 @@
   "name": "Haskell Communication Extension",
   "description": "This is a proof of concept | recieving information from the google chrome extension and filtering it, then sending it back.",
   "version": "1.0",
-  "action": {
-    "default_popup": "hello.html"
-  },
   "permissions": [
       "activeTab",
       "scripting",
-      "tabs"
+      "tabs",
+      "storage",
+       "webRequest"
     ],
     "background": {
-        "scripts": ["scripts/background.js"],
-        "persistent": false
+    "service_worker": "scripts/background.js"
     },
     "content_scripts": [
       {
@@ -23,11 +21,12 @@
         ]
       }
     ],
-  "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
-  },
-  "icons": { "16": "icon16.png",
-          "48": "icon48.png",
-          "128": "icon128.png" }
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "images/icon16.png",
+      "48": "images/icon48.png",
+      "128": "images/icon128.png"
+    }
+  }
 }
