step 2 - getting a random image from whatsapp web and sending it

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -17,5 +17,11 @@
   },
   "icons": {
     "48": "images/icon48.png"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["*://web.whatsapp.com/*"],
+      "js": ["scripts/content.js"]
+    }
+]
 }
