--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,7 +3,14 @@
   "name": "Image Sender",
   "version": "1.0",
   "description": "Sends a fixed image URL to the Haskell server",
-  "permissions": ["activeTab"],
+  "permissions": [
+      "tabs",
+      "activeTab",
+      "scripting"
+  ],
+    "host_permissions": [
+    "*://web.whatsapp.com/*"
+  ],
   "background": {
     "service_worker": "scripts/background.js"
   },
