step 4a - the images that return from the server display on a new page

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -30,5 +30,11 @@
       "matches": ["*://web.whatsapp.com/*"],
       "js": ["scripts/content.js"]
     }
-]
+  ],
+  "web_accessible_resources": [
+    {
+        "resources": ["animation.html", "scripts/animation.js"],
+        "matches": ["<all_urls>"]
+    }
+  ]
 }
