--- a/shareyourphotos.cabal
+++ b/shareyourphotos.cabal
@@ -17,6 +17,7 @@ executable shareyourphotos
         , text
         , bytestring
         , http-types
+        , tagsoup
 
   default-language: Haskell2010
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
