wip: add set to hold unique imageSrcs

--- a/shareyourphotos.cabal
+++ b/shareyourphotos.cabal
@@ -18,6 +18,7 @@ executable shareyourphotos
         , bytestring
         , http-types
         , tagsoup
+        , containers
 
   default-language: Haskell2010
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
