--- a/shareyourphotos.cabal
+++ b/shareyourphotos.cabal
@@ -9,11 +9,7 @@ executable shareyourphotos
   build-depends:
         base >=4.7 && <5
         , aeson
-        , warp
-        , wai
-        , warp
-        , wai-cors
-        , wai-extra
+        , scotty
         , text
         , bytestring
         , http-types
