--- a/shareyourphotos.cabal
+++ b/shareyourphotos.cabal
@@ -15,6 +15,7 @@ executable shareyourphotos
         , http-types
         , tagsoup
         , containers
+        , scalpel >=0.6.2.1
 
   default-language: Haskell2010
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
