--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,13 +2,13 @@
   "manifest_version": 3,
   "name": "Image Sender",
   "version": "1.0",
-  "description": "Sends a fixed image URL to the Haskell server",
+  "description": "Sends image URLs from WhatsApp Web to an animation page",
   "permissions": [
-      "tabs",
-      "activeTab",
-      "scripting"
+    "tabs",
+    "activeTab",
+    "scripting"
   ],
-    "host_permissions": [
+  "host_permissions": [
     "*://web.whatsapp.com/*"
   ],
   "background": {
@@ -33,8 +33,8 @@
   ],
   "web_accessible_resources": [
     {
-        "resources": ["animation.html", "scripts/animation.js"],
-        "matches": ["<all_urls>"]
+      "resources": ["animation.html", "scripts/animation.js"],
+      "matches": ["<all_urls>"]
     }
   ]
 }
