--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -28,7 +28,9 @@
   "content_scripts": [
     {
       "matches": ["*://web.whatsapp.com/*"],
-      "js": ["scripts/content.js"]
+      "js": ["scripts/content.js"],
+      // Run after DOM is loaded
+      "run_at": "document_end"
     }
   ],
   "web_accessible_resources": [
